--- a/email_generator/email.html
+++ b/email_generator/email.html
@@ -115,7 +115,8 @@
                 subscription.</p>
 
             <div class="button-container">
-                <a href="landing_page.html">Reactivate now</a>
+                <a href="https://jessrojasal.github.io/ADA_proximus_use-case/email_generator/email.html
+                ">Reactivate now</a>
             </div>
         </div>
 
