Update the mail

--- a/email_generator/email.html
+++ b/email_generator/email.html
@@ -115,7 +115,7 @@
                 subscription.</p>
 
             <div class="button-container">
-                <a href="https://jessrojasal.github.io/ADA_proximus_use-case/email_generator/email.html
+                <a href="https://jessrojasal.github.io/ADA_proximus_use-case/email_generator/landing_page
                 ">Reactivate now</a>
             </div>
         </div>
