--- a/email_generator/training.html
+++ b/email_generator/training.html
@@ -307,7 +307,9 @@
                 </li>
             </ul>
 
+
             <div class="button-container">
+                <a href="https://forms.gle/Acy9TZC7h28oboLaA">Test your information !</a> <br> <br>
                 <a
                     href="https://www.proximus.be/support/en/id_sfaqr_mail_fraud/personal/support/internet/e-mails-and-website/problems-with-your-mailbox/avoid-fraud-via-e-mail-pop-up-web-text-phone.html">Learn
                     More About Phishing Prevention</a>
@@ -316,8 +318,7 @@
         <div class="footer">
             <p>&copy; 2025 Proximus. All rights reserved.</p>
             <p>
-                <a
-                    href="https://www.proximus.be/support/en/id_sfaqr_mail_fraud/personal/support/internet/e-mails-and-website/problems-with-your-mailbox/avoid-fraud-via-e-mail-pop-up-web-text-phone.html">Privacy
+                <a href="https://www.proximus.be/en/id_cr_privacy_policy/personal/orphans/privacy-policy.html">Privacy
                     Policy</a> | <a
                     href="https://www.proximus.be/support/en/id_cr_contact/personal/support/contact-our-customer-service.html">Contact
                     Support</a>
